--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -19,7 +19,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: var(--font-ibm-plex-mono);
+  font-family: var(--font-press-start);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
